--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
@@ -34,7 +34,7 @@
                                         <div class="card-header d-flex justify-content-between">
                                             <h4 class="card-title">Week @week</h4>
                                             <div class="d-flex justify-content-end">
-                                                <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="void javascritp(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
+                                             @*    <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="void javascritp(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a> *@
 
                                                 <!-- Delete Button for week -->
                                                 <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_Week_@week">
