--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskMaster/CreateEdit.cshtml
@@ -32,14 +32,14 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.TaskCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.TaskCode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.TaskCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.TaskCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-8">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.TaskDescription, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.TaskDescription, new { @class = "form-control" })
+                                        @Html.TextAreaFor(x => x.TaskDescription, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.TaskDescription)
                                     </div>
                                 </div>
