--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/_List.cshtml
@@ -26,15 +26,12 @@
                             <td class="text-center data-action">
                                 @if (Model.TaskApprovalSettingId > 0)
                                 {
-                                    <a href="../@controllerName/Update" title="UpdateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>
+                                    <a href="../@controllerName/UpdateTaskApprovalSetting?taskMasterId=@item.TaskMasterId&centreCode=@Model.SelectedCentreCode" title="UpdateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>
                                 }
                                 else
                                 {
-                                        <a href="../@controllerName/CreateTaskApprovalSetting" title="CreateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-plus"></i></a>
+                                    <a href="../@controllerName/UpdateTaskApprovalSetting?taskMasterId=@item.TaskMasterId&centreCode=@Model.SelectedCentreCode" title="CreateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-plus"></i></a>
                                 }
-                                @* <a href="../@controllerName/Update" title="UpdateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/CreateTaskApprovalSetting" title="CreateTaskApprovalSetting" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-plus"></i></a> *@
-                               
                             </td>
                         </tr>
                     }
