--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMNewRegistration/DBTMNewRegistration.cshtml
@@ -3,7 +3,6 @@
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     ViewBag.Title = "New Registration";
-    //string actionName = string.IsNullOrEmpty(Model.ResetPasswordToken) ? "ResetPasswordSendLink" : "ResetPassword";
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <div class="card-body p-0 auth-content" style="max-height: 550px; overflow-y: auto;">
@@ -17,59 +16,66 @@
         <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
             @using (Html.BeginForm(actionName, "DBTMNewRegistration", FormMethod.Post))
             {
-                 @* @Html.AntiForgeryToken()  *@
-                    <div class="form-group mb-2">
-                    @Html.LabelFor(x => x.CentreName, new { @class = "form-label required" })
-                        <div class="input-group mb-2">
-                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control"})
+                @Html.AntiForgeryToken() 
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.CentreName, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.CentreName)
                         </div>
-                    @Html.ValidationMessageFor(m => m.CentreName)
                     </div>
-                     <div class="form-group ">
-                          @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
-                      <div class="input-group">
-                       @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control"})
-                     </div>
-                         @Html.ValidationMessageFor(x => x.CentreCode)
-                     </div>
-                       <div class="form-group mb-2">
-                        @Html.LabelFor(x => x.EmailId, new { @class = "form-label required" })
-                      <div class="input-group">
-                       @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control"})
-                         </div>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.CentreCode)
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.EmailId, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.EmailId)
-                      </div>      
-                      <div class="form-group mb-2">
-                        @Html.LabelFor(x => x.CellPhone, new { @class = "form-label required" })
-                      <div class="input-group">
-                        @Html.TextBoxFor(x => x.CellPhone, new { @class = "form-control" })
-                         </div>
-                           @Html.ValidationMessageFor(x => x.CellPhone)
-                      </div>
-                       <div class="form-group mb-2">
-                    @Html.LabelFor(x => x.CentreAddress, new { @class = "form-label required" })
-                      <div class="input-group">
-                        @Html.TextBoxFor(x => x.CentreAddress, new { @class = "form-control" })
-                         </div>
-                           @Html.ValidationMessageFor(x => x.CentreAddress)
-                      </div>
-                      <div class="form-group mb-2">
-                        @Html.LabelFor(x => x.GeneralCityMasterId, new { @class = "form-label required" })
-                      <div class="input-group">
-                       @Html.TextBoxFor(x => x.GeneralCityMasterId, new { @class = "form-control"})
-                         </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.CellPhone, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.CellPhone, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.CellPhone)
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.CentreAddress, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.CentreAddress, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.CentreAddress)
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.GeneralCityMasterId, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.GeneralCityMasterId, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.GeneralCityMasterId)
-                      </div>      
-                      <div class="form-group mb-2">
-                        @Html.LabelFor(x => x.Pincode, new { @class = "form-label required" })
-                      <div class="input-group">
-                        @Html.TextBoxFor(x => x.Pincode, new { @class = "form-control" })
-                         </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="mb-3">
+                            @Html.LabelFor(x => x.Pincode, new { @class = "form-label required" })
+                            @Html.TextBoxFor(x => x.Pincode, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.Pincode)
-                      </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group row my-3">
                     <div class="col-sm-6">
                         <div class="custom-control custom-switch switch-success">
+                            <div class="col-sm-6 text-end">
+                                <button class="btn btn-primary w-100 waves-effect waves-light">Submit<i class="fas fa-sign-in-alt ms-1"></i></button>
+                            </div>
                             @*  <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
                         <label class="form-label text-muted" for="customSwitchSuccess">Remember me</label> *@
                         </div>
@@ -79,11 +85,11 @@
                     </div>
                 </div>
 
-                <div class="form-group mb-0 row">
-                    <div class="col-12">
-                        <button class="btn btn-primary w-100 waves-effect waves-light">Submit<i class="fas fa-sign-in-alt ms-1"></i></button>
-                    </div>
-                </div>
+                @* <div class="form-group mb-0 row">
+            <div class="col-sm-6 text-end">
+            <button class="btn btn-primary w-100 waves-effect waves-light">Submit<i class="fas fa-sign-in-alt ms-1"></i></button>
+            </div>
+            </div> *@
             }
         </div>
     </div>
