--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -42,21 +42,19 @@
                     <div class="col-sm-6 text-end">
                         <a href="/user/resetpassword" class="text-muted font-13 forgot-password"><i class="dripicons-lock"></i>Forgot password?</a>
                     </div>
-                   @*  <div class="col-sm-6 text-end">
-                        <a href="/dbtmnewregistration/newregistration" class="text-muted font-13 New-Registration"><i class="dripicons-lock"></i>New Registration?</a>
-                    </div> *@
                 </div>
                 <div class="form-group mb-0 row">
                     <div class="col-12">
                         <button class="btn btn-primary w-100 waves-effect waves-light">Log In<i class="fas fa-sign-in-alt ms-1"></i></button>
                     </div>
-                    </div>
-                     <div class="form-group mb-9 row">
-                    <div class="col-sm-10 text-end">
-                        <a href="/dbtmnewregistration/newregistration" class="text-muted font-13 New-Registration">Don't have an account? <i class="dripicons-to-do"></i> New Registration</a>
-                    </div>
-                </div> 
+                </div>
                 @Html.HiddenFor(x => x.ReturnUrl)
+            }
+            @if (CoditechAdminSettings.ApplicationCode == "DBTM")
+            {
+                <div class="m-3 text-center text-muted">
+                    <p class="mb-0">Don't have an account ?  <a href="/dbtmnewregistration/newregistration" class="text-primary ms-2">Free Resister</a></p>
+                </div>
             }
         </div>
     </div>
