--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
@@ -23,7 +23,27 @@
                             <td>@item.PrintShortDesc</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalDepartmentId=@item.GeneralDepartmentMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?departmentIds=@item.GeneralDepartmentMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <!-- Delete Button Triggering Modal -->
+                                <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GeneralDepartmentMasterId"><i class="fas fa-trash-alt"></i></a>
+                                <!-- Delete Confirmation Modal -->
+                                <div class="modal fade" id="confirmDeleteModal_@item.GeneralDepartmentMasterId" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" style="max-width: 500px;" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Delete</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body" style="text-align: left;">
+                                                <span style="font-size: 24px; margin-right: 10px;"><i class="fas fa-exclamation-triangle text-danger"></i></span>
+                                                <span style="font-size: 16px;">Are you sure you want to delete this record?</span>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                <!-- Delete action with GeneralDepartmentMasterId parameter -->
+                                                <a href="/@controllerName/Delete?departmentIds=@item.GeneralDepartmentMasterId" class="btn btn-outline-danger">Delete</a>
+                                            </div>
+                                        </div>
+                                    </div>
                             </td>
                         </tr>
                     }
