--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/_List.cshtml
@@ -22,8 +22,8 @@
                             <td>@item.BuildingFloor</td>
                             <td>@item.Area</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?organisationCentrewiseBuildingRoomId=@item.OrganisationCentrewiseBuildingRoomId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?organisationCentrewiseBuildingRoomIds=@item.OrganisationCentrewiseBuildingRoomId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?organisationCentrewiseBuildingRoomId=@item.OrganisationCentrewiseBuildingRoomId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                @* <a href="../@controllerName/Delete?organisationCentrewiseBuildingRoomIds=@item.OrganisationCentrewiseBuildingRoomId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
                     }
