HMS - Pre-filled "From Date" and "Charges" in Create Hospital Doctor Visiting Charges

--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
@@ -110,6 +110,7 @@
     <script type="text/javascript">
         $(function () {
             $('#Charges').val('');
+            $('#FromDate').val('');
             $("#FromDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
