--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
@@ -33,7 +33,7 @@
                             @Html.HiddenFor(m => m.TaskMasterId)
                             @Html.HiddenFor(m => m.CentreCode)
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-lg-2">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.TaskCode, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.TaskCode, new { @class = "form-control", @disabled = "disabled" })
@@ -46,12 +46,23 @@
                                         @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control", @disabled = "disabled" })
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
-                                </div>                               
-                                <div class="col-lg-4">
+                                </div>
+                                <div class="col-lg-2">
                                     <div class="mb-3">
-                                        <a class=" btn btn-sm btn-soft-primary" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Approver</a>
+                                        @Html.LabelFor(x => x.CountNumber, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.CountNumber, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.CountNumber)
                                     </div>
                                 </div>
+                                <div class="col-lg-2">
+                                    <div class="mb-3">
+                                        <a class=" btn btn-sm btn-soft-primary" onclick="TaskApprovalSetting.GetEmployeeListByCentreCode('@Model.CentreCode','@Model.CountNumber')" role="button"><i class="fas fa-plus me-2"></i>Add Approver</a>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                            <div class="row" id="EmployeeListId">
+                                
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.CentreCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
@@ -63,3 +74,7 @@
     </div>
 </div>
 
+@section scripts {
+    <!-- end page content -->
+    <script src="~/js/coditech/General/TaskApprovalSetting.js"></script>
+}
