Code check-in for TaskAprrovalSetting

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/TaskApprovalSettingEmployeeList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/TaskApprovalSettingEmployeeList.cshtml
@@ -1,23 +1,36 @@
 ﻿@using Coditech.Admin.Utilities;
 @using Coditech.Common.API.Model;
-@model TaskApprovalSettingEmployeeViewModel
+@model TaskApprovalSettingViewModel
 @{
     Layout = null;
+    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-<!-- Page Content-->
-@for (int i = 1; i <= Model.CountNumber; i++)
-{
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="mb-3">
-                @Html.DropDownList("EmployeeId", ViewData["EmployeeList"] as List<SelectListItem>, new { @class = "form-select"})
-                @Html.ValidationMessageFor(x => x.EmployeeId)
-            </div>
-        </div>
-        <div class="col-lg-6">
-            <div class="mb-3">
-                @i
-            </div>
-        </div>
-    </div>
-}
+
+<!-- Page Content -->
+<div class="table-responsive">
+    <table class="table table-bordered table-sm" id="makeEditable">
+        <thead>
+            <tr>
+                <th>Employee List</th>
+                <th>Priority</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (int i = 1; i <= Model.CountNumber; i++)
+            {
+                <tr>
+                    <td>
+                        @Html.DropDownList("EmployeeId_" + i, ViewData["EmployeeList"] as List<SelectListItem>, new { @class = "form-select" })
+                        @Html.ValidationMessageFor(x => x.EmployeeIds)
+                    </td>
+                    <td>
+                        @i
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+<script src="~/js/coditech/General/TaskApprovalSetting.js"></script>
+
