--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
@@ -28,10 +28,11 @@
                         </div>  <!--end row-->
                     </div>
                     <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+                        @using (Html.BeginForm("AddUpdateTaskApprovalSetting", controllerName, FormMethod.Post, new { id = "frmTaskApprovalSetting" }))
                         {
                             @Html.HiddenFor(m => m.TaskMasterId)
                             @Html.HiddenFor(m => m.CentreCode)
+                            @Html.HiddenFor(m => m.EmployeeIds, new { id = "EmployeeIds" })
                             <div class="row">
                                 <div class="col-lg-2">
                                     <div class="mb-3">
@@ -64,7 +65,7 @@
                             <div class="row" id="EmployeeListId">
                                 
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <button type="submit" class="btn btn-success" id="saveDropdownValues" onclick="TaskApprovalSetting.SaveData()">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.CentreCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
@@ -73,8 +74,4 @@
         </div>
     </div>
 </div>
-
-@section scripts {
-    <!-- end page content -->
-    <script src="~/js/coditech/General/TaskApprovalSetting.js"></script>
-}
+<script src="~/js/coditech/General/TaskApprovalSetting.js"></script>
