--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskApprovalSetting/CreateEditTaskApprovalSetting.cshtml
@@ -55,7 +55,7 @@
                                 </div>
                                 <div class="col-lg-2">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CountNumber, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.CountNumber, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.CountNumber, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()", @maxlength = "3" })
                                         @Html.ValidationMessageFor(x => x.CountNumber)
                                     </div>
